# biosim_template

./: cookiecutter.json
{{ cookiecutter.project_slug }}/: .gitignore  pyproject.toml  requirements.txt  setup.cfg  tox.ini
{{ cookiecutter.project_slug }}/examples/: check_sim.py  population_generator.py
{{ cookiecutter.project_slug }}/src/biosim/: __init__.py  simulation.py
{{ cookiecutter.project_slug }}/tests/: test_biosim_interface.py
